Sea gregan cambios para obligaciones pendientes y estado de cuenta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3466,7 +3466,7 @@ obligacion.sujeto.descargar=Descargar PDF
 obligacion.sujeto.vigencia=Vigencia
 obligacion.sujeto.buscar=Buscar
 
-obligacion.sujeto.predial.titulo=Impuestos de Predial
+obligacion.sujeto.predial.titulo=Predial Unificado
 obligacion.sujeto.predial.chip=CHIP
 obligacion.sujeto.predial.matin=Matrícula Inmobiliaría
 obligacion.sujeto.predial.direccion=Dirección
@@ -3509,7 +3509,7 @@ obligacion.sujeto.vehiculos.paglinea=Pago en Línea
 obligacion.sujeto.vehiculos.genrop=Generar ROP
 obligacion.sujeto.vehiculos.presendecla=Generar declaración
 
-obligacion.sujeto.gasolina.titulo=Impuestos de Motores a Gasolina
+obligacion.sujeto.gasolina.titulo=Impuestos Sobretasa a la Gasolina
 obligacion.sujeto.gasolina.aniograv=Año Gravable
 obligacion.sujeto.gasolina.periodo=Periodo
 obligacion.sujeto.gasolina.edoobliga=Estado de Obligación
@@ -3522,7 +3522,7 @@ obligacion.sujeto.gasolina.paglinea=Pagar en línea
 obligacion.sujeto.gasolina.informacion=Información
 obligacion.sujeto.gasolina.oblig=Obligación
 
-obligacion.sujeto.delurbana.titulo=Delienación urbana
+obligacion.sujeto.delurbana.titulo=Delineación
 obligacion.sujeto.delurbana.cdu=CDU
 obligacion.sujeto.delurbana.chip=CHIP
 obligacion.sujeto.delurbana.direccion=Dirección
@@ -3822,7 +3822,7 @@ edocuenta.inicial.ica.saldocargo=Saldo a cargo
 edocuenta.inicial.ica.saldofavor=Saldo a favor
 edocuenta.inicial.ica.total=Total
 
-edocuenta.inicial.deliurbana.titulo=Impuestos de Delineación Urbana
+edocuenta.inicial.deliurbana.titulo=Delineación
 edocuenta.inicial.deliurbana.cdu=CDU
 edocuenta.inicial.deliurbana.licenconst=Licencia de construcción
 edocuenta.inicial.deliurbana.direccion=Dirección
@@ -3841,7 +3841,7 @@ edocuenta.inicial.deliurbana.orientacion=Orientación
 edocuenta.inicial.deliurbana.vigencia=Vigencia
 
 
-edocuenta.inicial.gasolina.titulo=Impuestos de Motores a Gasolina
+edocuenta.inicial.gasolina.titulo=Impuesto Sobretasa a la Gasolina
 edocuenta.inicial.gasolina.anigrav=Año gravable
 edocuenta.inicial.gasolina.periodo=Periodo
 edocuenta.inicial.gasolina.estado=Estado
