Se agregan cambios a rol agentes retenedores para mostrar pantalla carga de documentos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -573,6 +573,7 @@ breadcrumb.reportante.sanciones=Sanciones impuestas
 breadcrumb.miRITREPO= Mi RIT
 breadcrumb.certificacionRETE= Certificación RIT
 breadcrumb.certificacionREPO= Certificación RIT
+breadcrumb.retenedor.carga= Carga de Documentos
 #->FIN dev-eduardo Pantalla de menu MiRIT->Certificacion 19/01/2019
 
 
