Se agregan cambios para seccion de preguntas frecuentes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1397,6 +1397,7 @@ text.account.profile.delineacion= Impuestos de Delineación Urbana
 text.account.profile.buzon= Mi Buzón
 text.account.profile.buzonRETE= Mi Buzón
 text.account.profile.buzonREPO= Mi Buzón
+text.account.profile.preguntasfre=Preguntas frecuentes
 text.account.profile.oblipendienetes= Obligaciones
 text.account.profile.arOblipendienetes= Obligaciones
 text.account.profile.relapagos= Relación de Pagos
@@ -28152,6 +28153,6 @@ destino.idTipValla.04 =Valla Tubular Comercial
 destino.idTipValla.05=Valla Tubular Comercial
 destino.idTipValla.=-
 
-
+preguntas.frecuentes.title= Preguntas Frecuentes
 
 
