Descuento 1% - desarrollo inicial

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28155,4 +28155,47 @@ destino.idTipValla.=-
 
 preguntas.frecuentes.title= Preguntas Frecuentes
 
+facturacion.descuento1PC.inicial.nota=Nota: Podrás realizar actualización de la información, actualmente registrada por secciones. Una vez concluidas las actualizaciones deberás dar clic en el botón ACTUALIZAR RIT, de lo contrario el sistema no efectuará los cambios 
+facturacion.descuento1PC.inicial.datosBasicos.titulo= Mis datos Básicos Persona Natural
+facturacion.descuento1PC.inicial.datosBasicos.tipoDocumento= Tipo de Documento
+facturacion.descuento1PC.inicial.datosBasicos.numeroDocumento= Número de Documento
+facturacion.descuento1PC.inicial.datosBasicos.primerNombre= Primer Nombre
+facturacion.descuento1PC.inicial.datosBasicos.segundoNombre= Segundo Nombre
+facturacion.descuento1PC.inicial.datosBasicos.primerApellido= Primer Apellido
+facturacion.descuento1PC.inicial.datosBasicos.segundoApellido= Segundo Apellido
+facturacion.descuento1PC.inicial.datosBasicos.fechaExpedicion= Fecha de Expedición del Documento
+facturacion.descuento1PC.inicial.datosGenerales.titulo= Mis datos generales Persona Natural
+facturacion.descuento1PC.inicial.datosBasicos.tratamiento= Tratamiento
+facturacion.descuento1PC.inicial.datosBasicos.fechaNacimiento= Fecha de Nacimiento 
+facturacion.descuento1PC.inicial.datosBasicos.sexo= Sexo
+facturacion.descuento1PC.inicial.datosBasicos.paisOrigen= País de Origen 
+facturacion.descuento1PC.inicial.datosBasicos.claseIC= Clase de IC
+facturacion.descuento1PC.inicial.datosBasicos.nacionalidad= Nacionalidad
+facturacion.descuento1PC.inicial.datosBasicos.lugarNacimiento= Lugar de Nacimiento
+facturacion.descuento1PC.inicial.actualizarNombre= Actualizar Nombre
+
+facturacion.descuento1PC.inicial.datosContacto.titulo= Datos de contacto
+facturacion.descuento1PC.inicial.datosContacto.dirNotificacion = Dirección de Notificación
+facturacion.descuento1PC.inicial.datosContacto.otraDirContacto = Otra dirección de contacto
+facturacion.descuento1PC.inicial.datosContacto.telFijo = Teléfono fijo
+facturacion.descuento1PC.inicial.datosContacto.telExtension = Extensión
+facturacion.descuento1PC.inicial.datosContacto.telCelular = Teléfono celular
+facturacion.descuento1PC.inicial.datosContacto.redSocial = Red social
+facturacion.descuento1PC.inicial.datosContacto.usuarioRedSocial = Usuario Red Social
+facturacion.descuento1PC.inicial.datosContacto.nota1 = Diligencia los campos requeridos con la dirección actual. Deja en blanco los campos que no requieras y verifica en el recuadro superior tu información completa
+facturacion.descuento1PC.inicial.datosContacto.pais = País 
+facturacion.descuento1PC.inicial.datosContacto.tipoDireccion =  Tipo de dirección
+facturacion.descuento1PC.inicial.datosContacto.departamento = Departamento
+facturacion.descuento1PC.inicial.datosContacto.municipio = Municipio
+facturacion.descuento1PC.inicial.datosContacto.codigoPostal = Código Postal
+facturacion.descuento1PC.inicial.datosContacto.nota2 = Selecciona los datos requeridos en la lista desplegable inferior. Digita en el recuadro el detalle
+facturacion.descuento1PC.inicial.datosContacto.aceptar = Aceptar
+facturacion.descuento1PC.inicial.datosContacto.agregarOtraDir = Agregar otra dirección
+
+facturacion.descuento1PC.inicial.autorizaciones.nota1 = Autorizo el uso del búzon electrónico para recibir notificaciones
+facturacion.descuento1PC.inicial.autorizaciones.nota2 = Autorizo el uso del búzon electrónico para recibir notificaciones
+facturacion.descuento1PC.inicial.autorizaciones.siAcepto = Si acepto
+facturacion.descuento1PC.inicial.autorizaciones.noAcepto = No acepto
+facturacion.descuento1PC.inicial.autorizaciones.certificacionRIT = Certificación RIT
+facturacion.descuento1PC.inicial.autorizaciones.actualizarRIT = Actualizar RIT
 
