Se agrega campo de anexos para buzón

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3246,6 +3246,7 @@ mibuzon.notificaciones.autoridad= Autoridad Emisora
 mibuzon.notificaciones.asunto= Asunto
 mibuzon.notificaciones.fecnoti= Fecha de notificación
 mibuzon.notificaciones.leidos= Leídos
+mibuzon.notificaciones.anexos= Anexos
 
 mibuzon.mensajes.mensajes= Mensajes
 mibuzon.mensajes.nuevos= Nuevos
