Descuento 1% - mensaje de descuento al visualizar la pagina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1404,6 +1404,7 @@ text.account.profile.relapagos= Relación de Pagos
 text.account.profile.arRelapagos= Relación de Pagos
 text.account.profile.vehiculos= Impuestos de Vehículos
 text.account.profile.vehiculos.declaracion= Impuestos de vehículos declaración
+text.account.profile.descuento1pc= Descuento 1%
 text.account.profile.descargaFac= Descarga factura
 text.account.profile.reexpedicionFac=Reexpedición de factura
 text.account.profile.estadocuenta= Estado de Cuenta
