Se cambia etiqueta para predial a prorrateado

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5207,7 +5207,7 @@ predialcuatro.generales.cedula=Cédula catastral
 predialcuatro.generales.opuso=Opción de uso
 
 predialcuatro.datospredio.titulo=Datos del predio
-predialcuatro.datospredio.avaluo=Avalúo prorateado
+predialcuatro.datospredio.avaluo=Avalúo prorrateado
 predialcuatro.datospredio.avaluoindice=Avalúo índice edificabilidad
 
 predialcuatro.datliquidacion.titulo=Datos de Liquidación
@@ -28200,4 +28200,6 @@ facturacion.descuento1PC.inicial.autorizaciones.siAcepto = Si acepto
 facturacion.descuento1PC.inicial.autorizaciones.noAcepto = No acepto
 facturacion.descuento1PC.inicial.autorizaciones.certificacionRIT = Certificación RIT
 facturacion.descuento1PC.inicial.autorizaciones.actualizarRIT = Actualizar RIT
+
+buzon
 
