SDH Customer Support - FAQs (Preguntas Frecuentes [ES]) - Backoffice Administration

--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/localization/sdhbackoffice-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/localization/sdhbackoffice-locales_en.properties
@@ -28,3 +28,14 @@
 dummy=dummy
 com.hybris.backoffice.perspectiveChooser.sdh.customer.service.chat=Custom Service (Chat1)
 com.sdh.widgets.sdhbackofficewidget.sdh.customer.service.chat=Custom Service (Chat2)
+
+type.SdhFAQsCategory.name=SDH FAQs (Category)
+type.SdhFAQsCategory.code.name=Code
+type.SdhFAQsCategory.description.name=Description
+
+type.SdhFAQs.name=SDH FAQs
+type.SdhFAQs.code.name=Code
+type.SdhFAQs.category.name=Category
+type.SdhFAQs.question.name=Question
+type.SdhFAQs.answer.name=Answer
+
