--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/sdhbackoffice-backoffice-labels/labels_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/sdhbackoffice-backoffice-labels/labels_en.properties
@@ -18,5 +18,10 @@
 dummy=dummy
 
 hmc.tab.sdh.properties=SDH
+hmc.tab.sdh.data=Essential Data
 hmc.tab.sdh.administration=Información del contribuyente
 sdh.customer.service.chat=Custom Service (Chat)
+
+create.essential.label=Essential Information
+create.SdhFAQs.label=Question/Answer
+hmc.sdhCustomerSupport=SDH Support (FAQs)
