--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/sdhbackoffice-backoffice-labels/labels_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/resources/sdhbackoffice-backoffice-labels/labels_es.properties
@@ -18,5 +18,11 @@
 dummy=ficticio
 
 hmc.tab.sdh.properties=SDH
+hmc.tab.sdh.data=Datos Esenciales
 hmc.tab.sdh.administration=Información del contribuyente
 sdh.customer.service.chat=Atencion al cliente (Chat)
+
+create.essential.label=Información Esencial
+create.SdhFAQs.label=Pregunta Respuesta
+
+hmc.sdhCustomerSupport=SDH Soporte (FAQs)
