--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -156,3 +156,13 @@ type.SDHReteICATax.numID.name=Número ID
 
 type.BaseStore.captchaCheckEnabled.name=Widget de captcha activado
 type.BaseStore.captchaCheckEnabled.description=Widget de captcha activado
+
+type.SdhFAQsCategory.name=SDH FAQs (Categoría)
+type.SdhFAQsCategory.code.name=Código
+type.SdhFAQsCategory.description.name=Descripción
+
+type.SdhFAQs.name=SDH FAQs
+type.SdhFAQs.code.name=Código
+type.SdhFAQs.category.name=Categoría
+type.SdhFAQs.question.name=Pregunta
+type.SdhFAQs.answer.name=Respuesta
