Se agregan cambios para escuela virtual

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28201,5 +28201,9 @@ facturacion.descuento1PC.inicial.autorizaciones.noAcepto = No acepto
 facturacion.descuento1PC.inicial.autorizaciones.certificacionRIT = Certificación RIT
 facturacion.descuento1PC.inicial.autorizaciones.actualizarRIT = Actualizar RIT
 
-buzon
+#Escuela virtual
+escuela.menu.foros=Foros tributarios
+escuela.menu.encuesta=Encuestas de servicio
+escuela.menu.ninos=Portal para niños
+escuela.menu.actividades=Actividades online
 
