Terceros Notario Buscar - Web service table

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1,5 +1,13 @@
 ﻿# put localizations or messages used in your web application into this file
 #
+sdh.standard.global.message={0}
+sdh.tercerosAut.chip.table.header=CHIP
+sdh.tercerosAut.matriculaInmobiliaria.table.header=Matrícula Inmobiliaria
+sdh.tercerosAut.direccion.table.header=Dirección
+sdh.tercerosAut.anioGravable.table.header=Año Gravable
+sdh.tercerosAut.estadoObligacion.table.header=Estado Obligacíon
+
+
 
 text.unidentified.customer=No identificado
 checkout.multi.bundle={0}
