Vehicular (declaracion) Ajustes en catalogo de tipo de vehiculos, avaluo, catalogo de cilindraje

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28084,6 +28084,7 @@ vehiculos.detalle.tipoVeh.5=MOTOS Y MOTOCARROS
 vehiculos.detalle.tipoVeh.6=PASAJEROS
 vehiculos.detalle.tipoVeh.7=CARGA
 vehiculos.detalle.tipoVeh.8=AMBULANCIAS
+vehiculos.detalle.tipoVeh.9=HIBRIDOS
 
 vehiculos.detalle.opuso.=-
 vehiculos.detalle.opuso.-=-
