--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3032,6 +3032,7 @@ impuestos.Pago.PSE.imprimirComprobante = Imprimir Comprobante
 impuestos.Pago.PSE.continuar = Continuar
 mensaje.Pago.PSE.mensaje1 = La impresion de certificado se realiza con usuario del contribuyente o usuario NIT
 error.Pago.PSE.error1 = Error al leer detalle de pago: {0}
+error.Pago.PSE.error2 = El monto del total a pagar debe ser mayor a 0.
 
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
 
