--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4645,7 +4645,7 @@ tramites.crear.inicial.adjdoc=Nombre documento
 tramites.crear.inicial.adj=Adjuntar
 tramites.crear.inicial.correo=Correo electrónico
 tramites.crear.inicial.rol=Rol
-
+tramites.crear.categorizacion.notas.01=En el texto del mensaje no olvide incluir la siguiente información:<br>*Número de Referencia de Recaudo del formulario tributario pagado. <br>* Banco en el que realizó el pago. <br>* Medio de pago (Ventanilla, Botón de pago, Corresponsal bancarios, Sucursal Virtual Bancaria...) <br>* Impuesto pagado <br>* Fecha en que realizó el pago <br>* Objeto de pago (predial CHIP, Vehículos Placa y los demás impuestos, tipo y número de identificación. <br>* Valor pagado.
 
 tramites.seguimiento.inicial.titulo=Trámites
 tramites.seguimiento.inicial.descrip=En la Oficina Virtual podrás crear y dar seguimiento a tus trámites de una forma muy sencilla
