--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3031,7 +3031,7 @@ error.impuestoDelineacion.calculoImpuesto.error1.attrib1 = {0}
 impuestos.Pago.PSE.imprimirComprobante = Imprimir Comprobante
 impuestos.Pago.PSE.continuar = Continuar
 mensaje.Pago.PSE.mensaje1 = La impresion de certificado se realiza con usuario del contribuyente o usuario NIT
-error.Pago.PSE.error1 = Error al leer detalle de pago: {0}
+	= Error al leer detalle de pago: {0}
 error.Pago.PSE.error2 = El monto del total a pagar debe ser mayor a 0.
 
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
@@ -3896,6 +3896,7 @@ edocuenta.inicial.obligaciones.impuesto=Impuesto
 edocuenta.inicial.obligaciones.saldcuneta=Saldo en cuenta
 
 pse.message.error.no.connection=Occurio un error con la conexión a PSE
+pse.message.error.no._FAIL_SERVICENOTEXISTS=Seleccione otro banco, con la referencia {0} en el menu Consultas->Obligaciones pendientes.
 pse.message.info.done.transaction.with.status=Transacción realizada con éxito y pendiente de procesar
 pse.message.info.success.transaction=Transacción exitosa
 pse.message.info.error.transaction.try.again=Transacción denegada, intente de nuevo
