Se cambia etiqueta para estado de cuenta ICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28218,3 +28218,4 @@ escuela.menu.encuesta=Encuestas de servicio
 escuela.menu.ninos=Portal para niños
 escuela.menu.actividades=Actividades online
 
+edocta.ica.ica=ICA
