SDH - Crear Agente Autorizado - WS Implementation

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4791,6 +4791,14 @@ autorizado.crear.impuesto.cdu=CDU
 autorizado.crear.impuesto.radicado=Radicado
 autorizado.crear.impuesto.selec=Seleccionar
 
+autorizado.crear.impuesto.predial=Predial
+autorizado.crear.impuesto.vehicular=Vehicular 
+autorizado.crear.impuesto.ica=ICA
+autorizado.crear.impuesto.reteIca=Rete ICA
+autorizado.crear.impuesto.sobretasaGasolina=Sobret la Gasolina
+autorizado.crear.impuesto.delineacionUrbana=Delineacion Urbana 
+autorizado.crear.impuesto.publicidadExterior=Publicidad Exterior
+
 autorizado.crear.tramgen.titulo=4.- Selecciona si la representación es por Trámites/Proceso o General
 autorizado.crear.tramgen.nota1=Selecciona en que vas a solicitar ser representado
 autorizado.crear.tramgen.represen.titulo=Representación
@@ -4848,6 +4856,14 @@ autorizado.crear.tramgen.tramite.2018= 2018
 autorizado.crear.tramgen.tramite.2017=2017
 autorizado.crear.tramgen.tramite.2016=2016
 autorizado.crear.tramgen.tramite.2015=2015
+
+autorizado.crear.tramgen.proce.miRit=Mi RIT
+autorizado.crear.tramgen.proce.miBuzon=Mi Buzón
+autorizado.crear.tramgen.proce.impuestos=Impuestos
+autorizado.crear.tramgen.proce.tramites=Trámites 
+autorizado.crear.tramgen.proce.facturacion=Facuración
+autorizado.crear.tramgen.proce.declaraciones=Declaraciones
+autorizado.crear.tramgen.proce.consultas=Consultas
 
 autorizado.crear.documentos.titulo=5.- Anexar documentación
 autorizado.crear.documentos.nota1=Para continuar cin tu proceso es necesario anexar los documentos
