Tercero autorizado - Ajustes objeto

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4682,6 +4682,8 @@ mirit.gas.tax.tipoDoc=Tipo de documento
 
 terceros.menu.sim=SIM
 terceros.menu.notarios=Notarios
+terceros.menu.sujeto=Por sujeto
+terceros.menu.objeto=Por objeto
 
 terceros.sim.buscar.iddoc=Id de documento
 terceros.sim.buscar.buscar= Buscar
