Se agregan cambios para funcionalidad SPAC

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3583,6 +3583,7 @@ obligacion.inicial.predio.numRef=Referencia
 obligacion.inicial.predio.obcontra=Objeto Contrato
 obligacion.inicial.predio.rop=Generar ROP
 obligacion.inicial.predio.pagar=Pagar
+obligacion.inicial.predio.spac= Generar SPAC
 
 obligacion.inicial.vehiculo.placa= Placa
 obligacion.inicial.vehiculo.modelo= Modelo
@@ -28239,3 +28240,11 @@ escuela.menu.actividades=Actividades online
 edocta.ica.ica=ICA
 
 notaria.subrol=03_03
+
+
+#Tabla SPAC
+spac.table.cuotas=No. de cuotas
+spac.table.pagar=Pagar antes de
+spac.table.monto=Monto
+spac.table.estatus=Estatus
+spac.table.descargar=Descargar SPAC
