--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1853,6 +1853,10 @@ taxpayers.description=Ingresa aquí para realizar tus transacciones en línea
 authorizedAgents.title=Agentes Autorizados
 authorizedAgents.description=Ingresa aquí si has sido autorizado por un contribuyente de impuestos distritales para realizar trámites.
 thirdAutorized.title=Tercero Autorizado
+thirdAutorized.title_01=Tercero Autorizado - Juzgados
+thirdAutorized.title_02=Tercero Autorizado - Notarias /Sucesiones
+thirdAutorized.title_03=Tercero Autorizado - Notarias / Transferencia de Dominio
+thirdAutorized.title_04=Tercero Autorizado - SIM
 thirdAutorized.description=Ingresa aquí si ha sido autorizado un contribuyente de impuestos distritales para realizar trámites
 retainingAgent.title=Agente Retenedor
 retainingAgent.description=Ingresa aquí si eres Retenedor del Impuesto de Industria y Comercio ICA
@@ -4687,6 +4691,49 @@ terceros.menu.sujeto=Por sujeto
 terceros.menu.objeto=Por objeto
 
 terceros.sim.buscar.iddoc=Id de documento
+terceros.sim.buscar.buscar= Buscar
+terceros.objeto.predial.titulo=Predial
+terceros.objeto.predial.chip=CHIP
+terceros.objeto.predial.matriculaInmobiliaria=Matricula Inmobiliaria
+terceros.objeto.predial.direccion=Dirección
+terceros.objeto.predial.anoGravable=Año Gravable
+terceros.objeto.predial.estadoObligacion=Estado de obligación
+
+terceros.objeto.ica.titulo=ICA
+terceros.objeto.ica.anoGravable=Año Gravable
+terceros.objeto.ica.periodo=Periodo
+terceros.objeto.ica.estadoObligacion=Estado de obligación
+
+terceros.objeto.vehicular.titulo=Sobretasa a vehículos
+terceros.objeto.vehicular.anoGravable=Año Gravable
+terceros.objeto.vehicular.placa=Placa
+terceros.objeto.vehicular.modelo=Modelo
+terceros.objeto.vehicular.marca=Marca
+terceros.objeto.vehicular.linea=Linea
+terceros.objeto.vehicular.estadoObligacion=Estado de obligación
+
+terceros.objeto.delineacion.titulo=Delineación urbana
+terceros.objeto.delineacion.anoGravable=Año Gravable
+terceros.objeto.delineacion.cdu=CDU
+terceros.objeto.delineacion.chip=CHIP
+terceros.objeto.delineacion.direccion=Dirección
+terceros.objeto.delineacion.estadoObligacion=Estado de obligación
+
+terceros.objeto.gasolina.titulo=Sobretasa a la gasolina
+terceros.objeto.gasolina.anoGravable=Año Gravable
+terceros.objeto.gasolina.periodo=Periodo
+terceros.objeto.gasolina.estadoObligacion=Estado de obligación
+
+terceros.objeto.publicidad.titulo=Publicidad Exterior
+terceros.objeto.publicidad.anoGravable=Año Gravable
+terceros.objeto.publicidad.numResolucion=Número de resolución
+terceros.objeto.publicidad.direccionValla=Dirección de la valla
+terceros.objeto.publicidad.orientacionValla=Orientación de la valla
+terceros.objeto.publicidad.estadoObligacion=Estado de obligación
+
+terceros.sim.buscar.numDocumento=Número de documento
+terceros.sim.buscar.iddoc=Id de documento
+terceros.sim.buscar.numeroObjeto=Número de objeto
 terceros.sim.buscar.buscar= Buscar
 
 terceros.notario.buscar.tipdoc=Tipo de documento
