Terceros autorizados (objeto y subjeto) Ajustes iniciales

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4704,6 +4704,8 @@ terceros.objeto.ica.anoGravable=Año Gravable
 terceros.objeto.ica.periodo=Periodo
 terceros.objeto.ica.estadoObligacion=Estado de obligación
 
+terceros.objeto.reteica.titulo=Reteica
+
 terceros.objeto.vehicular.titulo=Sobretasa a vehículos
 terceros.objeto.vehicular.anoGravable=Año Gravable
 terceros.objeto.vehicular.placa=Placa
