Facturacion - (Descuento 1% y Reexpedicion de factura) Ajustes en pantallas

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28280,6 +28280,8 @@ facturacion.descuento1PC.inicial.autorizaciones.noAcepto = No acepto
 facturacion.descuento1PC.inicial.autorizaciones.certificacionRIT = Certificación RIT
 facturacion.descuento1PC.inicial.autorizaciones.actualizarRIT = Actualizar RIT
 
+facturacion.reexpedirFactura.inicial.reexpedirFactura=Reexpedir Factura
+
 #Escuela virtual
 escuela.menu.foros=Foros tributarios
 escuela.menu.encuesta=Encuestas de servicio
