Se agregan cambios para Agentes Retenedores

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1404,6 +1404,8 @@ text.account.profile.declarafirm= Lista de Declaraciones a Firmar
 text.account.profile.delineacion= Impuestos de Delineación Urbana
 text.account.profile.buzon= Mi Buzón
 text.account.profile.buzonRETE= Mi Buzón
+text.account.profile.edoctaRETE= Estado de cuenta
+text.account.profile.obligaRETE= Obligaciones pendientes
 text.account.profile.buzonREPO= Mi Buzón
 text.account.profile.preguntasfre=Preguntas frecuentes
 text.account.profile.oblipendienetes= Obligaciones
