--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28238,6 +28238,7 @@ destino.idTipValla.=-
 
 preguntas.frecuentes.title= Preguntas Frecuentes
 
+configuracion.descuento1PC.fechaLimite=20200801
 facturacion.descuento1PC.inicial.nota=Nota: Podrás realizar actualización de la información, actualmente registrada por secciones. Una vez concluidas las actualizaciones deberás dar clic en el botón ACTUALIZAR RIT, de lo contrario el sistema no efectuará los cambios 
 facturacion.descuento1PC.inicial.datosBasicos.titulo= Mis datos Básicos Persona Natural
 facturacion.descuento1PC.inicial.datosBasicos.tipoDocumento= Tipo de Documento
