Se agregan cambios para buzon autorizado

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3248,7 +3248,8 @@ psePaymentForm.error.pdfVacio=No se encontró el archivo PDF para descargar.
 
 
 mibuzon.inicial.title= Buzón Tributario
-mibuzon.inicial.descripcion= El Buzón Tributario te mantendrá al pendiente de todas las notificaciones y mensajes sobre tus obligaciones fiscales. Conoce el  Reglamento
+mibuzon.inicial.descripcion= Bienvenido al servicio del buzón electrónico de la oficina virtual, mediante el cual la Dirección Distrital de Impuestos de Bogotá y La Dirección Distrital de Cobro enviarán comunicaciones informativas, respuesta a solicitudes o consultas y Actos Administrativos. Por favor utilizar este canal para mantener una comunicación permanente con la Administración Distrital.
+mibuzon.inicial.descripcion.error= Bienvenido al servicio del buzón electrónico de la oficina virtual, mediante el cual la Dirección Distrital de Impuestos de Bogotá y La Dirección Distrital de Cobro enviarán comunicaciones informativas, respuesta a solicitudes o consultas y Actos Administrativos. Por favor utilizar este canal para mantener una comunicación permanente con la Administración Distrital. Te informamos que aún no has autorizado el buzón para recibir las Notificaciones de actos administrativos, te invitamos a autorizarlo ingresando a mi RIT, sección de autorización
 mibuzon.inicial.verdetalle= Para ver el detalle da clic en alguna de las opciones que se presentan
 mibuzon.inicial.tipmsn= Tipo de mensaje
 mibuzon.inicial.numero= #
@@ -3258,7 +3259,7 @@ mibuzon.inicial.mns= Mensajes
 mibuzon.notificaciones.notifica= Notificaciones
 mibuzon.notificaciones.nuevos= Nuevos
 mibuzon.notificaciones.identi= Identificador 
-mibuzon.notificaciones.autoridad= Autoridad Emisora
+mibuzon.notificaciones.autoridad= Oficina Gestora
 mibuzon.notificaciones.asunto= Asunto
 mibuzon.notificaciones.fecnoti= Fecha de notificación
 mibuzon.notificaciones.leidos= Leídos
@@ -3267,7 +3268,7 @@ mibuzon.notificaciones.anexos= Anexos
 mibuzon.mensajes.mensajes= Mensajes
 mibuzon.mensajes.nuevos= Nuevos
 mibuzon.mensajes.identi= Identificador
-mibuzon.mensajes.autoridad= Autoridad Emisora
+mibuzon.mensajes.autoridad= Oficina Gestora
 mibuzon.mensajes.asunto= Asunto
 mibuzon.mensajes.fecnoti= Fecha de notificación
 mibuzon.mensajes.papelera= Papelera
@@ -28302,3 +28303,7 @@ spac.table.pagar=Pagar antes de
 spac.table.monto=Monto
 spac.table.estatus=Estatus
 spac.table.descargar=Descargar SPAC
+
+#Mensejes para buzón
+
+buzon.mirit.mensaje=Señor contribuyente para activar la Notificación electrónica de Actos oficiales en el buzón electrónico ingresa a este enlace para leer los términos y condiciones
