Se agregan cambios para buzon

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1998,6 +1998,7 @@ mirit.changePassword.passwordRequirements=La contraseña debe tener una letra ma
 mirit.constents.title=Autorizaciones
 mirit.constents.notifications=Autorizo el uso del buzón electrónico para recibir notificaciones.
 mirit.constents.useOfInformation=Autorizo uso de la anterior información para fines institucionales.
+mirit.constents.termsConditions=Estoy de acuerdo con los terminos y condiciones
 
 mirit.pj.name=Nombre o razón social
 mirit.pj.personalData.title=Mis datos Básicos persona jurídica
