Terceros autorizados - ajustes en visualizacion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4710,7 +4710,7 @@ terceros.objeto.ica.estadoObligacion=Estado de obligación
 
 terceros.objeto.reteica.titulo=Reteica
 
-terceros.objeto.vehicular.titulo=Sobretasa a vehículos
+terceros.objeto.vehicular.titulo=Vehículos
 terceros.objeto.vehicular.anoGravable=Año Gravable
 terceros.objeto.vehicular.placa=Placa
 terceros.objeto.vehicular.modelo=Modelo
