Se agregan cambios para check de terminos y condiciones en Mi RIT

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28307,4 +28307,4 @@ spac.table.descargar=Descargar SPAC
 
 #Mensejes para buzón
 
-buzon.mirit.mensaje=Señor contribuyente para activar la Notificación electrónica de Actos oficiales en el buzón electrónico ingresa a este enlace para leer los términos y condiciones
+buzon.mirit.mensaje=Señor contribuyente para activar la Notificación electrónica de Actos oficiales en el buzón electrónico ingresa a este enlace para leer los 
