--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2552,6 +2552,12 @@ publicidad.exterior.vehicles.typeservice=Tipo de servicio
 publicidad.exterior.vehicles.elementlocation=Orientación visual
 publicidad.exterior.vehicles.typevehicle= Tipo de vehículo
 
+publicidad.exterior.vehicles.tipoServicio.000=-
+publicidad.exterior.vehicles.tipoServicio.001=PÚBLICO
+publicidad.exterior.vehicles.tipoServicio.002=PARTICULAR
+publicidad.exterior.vehicles.tipoServicio.003=PÚBLICO COLECTIVO
+publicidad.exterior.vehicles.tipoServicio.004=PÚBLICO INDIVIDUAL
+
 publicidad.exterior.conventional=Convencional
 publicidad.exterior.conventional.typeitemreg=Tipo de elemento a registrar
 publicidad.exterior.conventional.buildingpermit=Licencia de construcción
