Terceros autorizados - Ajustes para juzgados y mensaje en busqueda por objeto

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4702,6 +4702,7 @@ terceros.menu.objeto=Por objeto
 
 terceros.sim.buscar.iddoc=Id de documento
 terceros.sim.buscar.buscar= Buscar
+terceros.sim.buscar.mensaje1=Puede ingresar la identificación del objeto o el ID que aparece en la parte superior derecha del reporte.
 terceros.objeto.predial.titulo=Predial
 terceros.objeto.predial.chip=CHIP
 terceros.objeto.predial.matriculaInmobiliaria=Matricula Inmobiliaria
