Se agregan cambios iniciales para RETEICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28314,4 +28314,25 @@ spac.table.descargar=Descargar SPAC
 
 #Mensejes para buzón
 
-buzon.mirit.mensaje=Señor contribuyente para activar la Notificación electrónica de Actos oficiales en el buzón electrónico ingresa a este enlace para leer los 
+buzon.mirit.mensaje=Señor contribuyente para activar la Notificación electrónica de Actos oficiales en el buzón electrónico ingresa a este enlace para leer los
+
+#Estado de cuenta para RETEICA
+edocuenta.inicial.reteica.titulo= RETEICA
+edocuenta.inicial.reteica.chip = CHIP
+edocuenta.inicial.reteica.matricula = Matrícula Inmobiliaría
+edocuenta.inicial.reteica.direccion = Dirección
+edocuenta.inicial.reteica.visualizar=Visualizar
+edocuenta.inicial.reteica.detalle= Detalle
+edocuenta.inicial.reteica.resposa=Responsabilidad
+edocuenta.inicial.reteica.saldcuenta=Saldo en cuenta
+edocuenta.inicial.reteica.aniograv=Año gravable
+edocuenta.inicial.reteica.desthacen=Destino hacendario
+edocuenta.inicial.reteica.estado=Concepto
+edocuenta.inicial.reteica.participa= % Participación
+edocuenta.inicial.reteica.saldocargo= Saldo a cargo
+edocuenta.inicial.reteica.saldofavor=Saldo a favor
+edocuenta.inicial.reteica.total=Total
+
+#Obligaciones Pendientes RETEICA
+
+obligacion.sujeto.reteica.titulo=RETEICA 
