Mi rit - ajuste en seccion Mis impuestos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2813,6 +2813,14 @@ mirit.gas.tax.numObjeto=Número de objeto
 mirit.sobrevehiculo.tax.title=Impuestos de vehículos
 mirit.delineacionurbana.tax.title=Impuestos de Delineación Urbana
 
+mirit.impuestos.predial.titulo=Impuesto predial
+mirit.impuestos.predial.CHIP=CHIP
+mirit.impuestos.predial.matrInmobiliaria=Matrícula Inmobiliaría
+mirit.impuestos.predial.direccionPredio=Dirección del Predio
+mirit.impuestos.predial.contratoArrenda=Número contrato de arrendamiento
+mirit.impuestos.predial.anioGravable=Año gravable
+mirit.impuestos.predial.numObjeto=Número de objeto
+
 #->INI dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
 declaracion.publicidad.titulo= Declaración de Publicidad Exterior
 declaracion.publicidad.datgene= Datos generales
