Tercero autorizado - ajuste para control de boton enter y nuevo boton para limpiar la pantalla

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4663,6 +4663,7 @@ tramites.crear.inicial.nota=Máximo 1000 caracteres
 tramites.crear.inicial.nota2=Solamente puedes adjuntar archivos en formato PDF
 tramites.crear.inicial.adjuntar=Adjuntar documento
 tramites.crear.inicial.cancelar=Cancelar
+tramites.crear.inicial.limpiar=Limpiar
 tramites.crear.inicial.enviar=Enviar
 tramites.crear.inicial.selarch=Seleccionar archivo
 tramites.crear.inicial.adjdoc=Nombre documento
