Se agregan cambios para RETEICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4313,7 +4313,7 @@ reteica.declaracion.firma.numdoc=Número de documento
 reteica.declaracion.firma.nombre=Apellido y Nombres o Razón Social
 reteica.declaracion.firma.firma=Firma
 reteica.declaracion.firma.regresar=Regresar
-reteica.declaracion.firma.presendecla=Generar declaración
+reteica.declaracion.firma.presendecla=Presentar declaración
 reteica.declaracion.firma.paglinea=Pagar en línea
 
 reteica.registro.period.01=Enero - Febrero
