Se agrega acento a la estiqueta de Regístrate

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1826,7 +1826,7 @@ text.consent.button.more=Más
 text.cookie.notification=Utilizamos cookies para asegurarnos de proporcionarle la mejor experiencia en nuestro sitio web. Si continúa, estará aceptando nuestra declaración de políticas.
 text.cookie.notification.accept=Ã
 
-login.link.getPassword=Registrate<a href="{0}" class="pssword"> aquí</a>
+login.link.getPassword=Regístrate<a href="{0}" class="pssword"> aquí</a>
 
 register.description=Hola, vamos a crear tu ID de usuario de la SDH para tu Oficina Virtual.<br>Úsalo para iniciar sesión y realizar operaciones tributarias de forma rápida y sencilla.<br>Para habilitar tu cuenta por favor comienza ingresando los siguientes datos.
 register.documentType=Tipo de Documento
