--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3919,6 +3919,14 @@ edocuenta.inicial.obligaciones.impuesto=Impuesto
 edocuenta.inicial.obligaciones.saldcuneta=Saldo en cuenta
 
 pse.message.error.no.connection=Occurio un error con la conexión a PSE
+pse.message.error.no._FAIL_EXCEEDEDLIMIT=El monto de la transacción excede los limites establecidos por PSE para la Secretaria de Hacienda, por favor comuniquese con la Secretaria de Hacienda.
+pse.message.error.no._FAIL_BANKUNREACHEABLE=La entidad financiera no puede ser contactada para iniciar la transacción, por favor seleccione otra o intente más tarde.
+pse.message.error.no._FAIL_SERVICENOTEXISTS=El banco seleccionado no puede proporcionar el servicio, por favor, seleccione otro presione el boton "Obligaciones Pendientes".
+pse.message.error.no._FAIL_SERVICENOTEXISTS=El banco seleccionado no puede proporcionar el servicio, por favor, seleccione otro presione el boton "Obligaciones Pendientes".
+pse.message.error.no._FAIL_SERVICENOTEXISTS=El banco seleccionado no puede proporcionar el servicio, por favor, seleccione otro presione el boton "Obligaciones Pendientes".
+pse.message.error.no._FAIL_SERVICENOTEXISTS=El banco seleccionado no puede proporcionar el servicio, por favor, seleccione otro presione el boton "Obligaciones Pendientes".
+pse.message.error.no._FAIL_SERVICENOTEXISTS=El banco seleccionado no puede proporcionar el servicio, por favor, seleccione otro presione el boton "Obligaciones Pendientes".
+pse.message.error.no._FAIL_SERVICENOTEXISTS=El banco seleccionado no puede proporcionar el servicio, por favor, seleccione otro presione el boton "Obligaciones Pendientes".
 pse.message.error.no._FAIL_SERVICENOTEXISTS=El banco seleccionado no puede proporcionar el servicio, por favor, seleccione otro presione el boton "Obligaciones Pendientes".
 pse.message.info.done.transaction.with.status=Transacción realizada con éxito y pendiente de procesar
 pse.message.info.success.transaction=Transacción exitosa
