Ajustes 4 para criterios ACH

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3050,7 +3050,7 @@ error.impuestoDelineacion.radicaDelin.error1 = Error al leer información del ra
 error.impuestoDelineacion.calculoImpuesto.error1.attrib1 = {0}
 #->FIN dev-federico 12/04/2019 textos para Delineacion urbana
 impuestos.Pago.PSE.imprimirComprobante = Imprimir Comprobante
-impuestos.Pago.PSE.continuar = Continuar
+impuestos.Pago.PSE.continuar = Imprimir Certificado
 mensaje.Pago.PSE.mensaje1 = La impresion de certificado se realiza con usuario del contribuyente o usuario NIT
 error.Pago.PSE.error1 = Error al leer detalle de pago: {0}
 error.Pago.PSE.error2 = El monto del total a pagar debe ser mayor a 0.
