Ajustes 8 criterios ACH

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3931,7 +3931,7 @@ pse.message.info.success.NOT_AUTHORIZED=La transacción no fue autorizada por la
 pse.message.info.success.FAILED=El procesamiento de la transacción fallo
 pse.message.info.error.transaction.try.again=Su transacción ha sido rechazada, intente de nuevo
 
-credibanco.message.error.no.connection=Occurio un error con la conexión a Crebibanco
+credibanco.message.error.no.connection=Occurio un error con la conexión a Credibanco
 credibanco.message.info.done.transaction.with.status=Transacción realizada con éxito y pendiente de procesar
 credibanco.message.info.success.transaction=Transacción exitosa
 credibanco.message.info.error.transaction.try.again=Su transacción ha sido rechazada, intente de nuevo 
