Se agregan cambios para SPAC

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -28364,3 +28364,6 @@ obligacion.sujeto.reteica.numFom=Formulario
 obligacion.sujeto.reteica.referencia=Referencia
 obligacion.sujeto.reteica.obContrato=Objeto contrato
 obligacion.sujeto.reteica.fecvencimiento=Fecha de vencimiento
+
+#Mensaje para predial del SPAC
+predial.mensaje.spac= Si te acoges al pago por cuotas debes dar click en firmar declaración, luego seleccionar el botón de SPAC y por último dar click en "Presentar Declaración"
