Se agregan cambios para texto de Obligaciones Pendientes RETEICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31262,3 +31262,6 @@ obligacion.sujeto.reteica.fecvencimiento=Fecha de vencimiento
 
 #Mensaje para predial del SPAC
 predial.mensaje.spac= Si te acoges al pago por cuotas debes dar click en firmar declaración, luego seleccionar el botón de SPAC y por último dar click en "Presentar Declaración"
+
+#Mensaje par obligaciones de RETEICA
+obligaciones.mensaje.reteica=Los contribuyentes no tienen obligaciones pendientes por concepto del impuesto ReteICA
