--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3604,10 +3604,11 @@ obligacion.inicial.predio.edoobli= Estado de obligación
 obligacion.inicial.predio.obligacion=Obligación
 obligacion.inicial.predio.numForm=Formulario
 obligacion.inicial.predio.numRef=Referencia
+obligacion.inicial.predio.totPagar=Total a pagar
 obligacion.inicial.predio.obcontra=Objeto Contrato
 obligacion.inicial.predio.rop=Generar ROP
 obligacion.inicial.predio.pagar=Pagar
-obligacion.inicial.predio.spac= Generar SPAC
+obligacion.inicial.predio.spac= Cupones
 
 obligacion.inicial.vehiculo.placa= Placa
 obligacion.inicial.vehiculo.modelo= Modelo
@@ -3621,6 +3622,7 @@ obligacion.inicial.vehiculo.edoobli= Estado de obligación
 obligacion.inicial.vehiculo.obligacion=Obligación
 obligacion.inicial.vehiculo.numForm=Formulario
 obligacion.inicial.vehiculo.numRef=Referencia
+obligacion.inicial.vehiculo.totPagar=Total a pagar
 obligacion.inicial.vehiculo.obcontra=Objeto contrato
 obligacion.inicial.vehiculo.rop=Generar ROP
 obligacion.inicial.vehiculo.pagar=Pagar
@@ -3636,6 +3638,7 @@ obligacion.inicial.ica.edoobli= Estado de obligación
 obligacion.inicial.ica.obligacion=Obligación
 obligacion.inicial.ica.numForm=Formulario
 obligacion.inicial.ica.numRef=Referencia
+obligacion.inicial.ica.totPagar=Total a pagar
 obligacion.inicial.ica.obcontra=Objeto contrato
 obligacion.inicial.ica.rop=Generar ROP
 obligacion.inicial.ica.pagar=Pagar
@@ -3651,6 +3654,7 @@ obligacion.inicial.publicidad.edoobli= Estado de obligación
 obligacion.inicial.publicidad.obligacion=Obligación
 obligacion.inicial.publicidad.numForm=Formulario
 obligacion.inicial.publicidad.numRef=Referencia
+obligacion.inicial.publicidad.totPagar=Total a pagar
 obligacion.inicial.publicidad.obcontra=Objeto contrato
 obligacion.inicial.publicidad.rop=Generar ROP
 obligacion.inicial.publicidad.pagar=Pagar
@@ -3666,6 +3670,7 @@ obligacion.inicial.gasolina.edoobli= Estado de obligación
 obligacion.inicial.gasolina.obligacion=Obligación
 obligacion.inicial.gasolina.numForm=Formulario
 obligacion.inicial.gasolina.numRef=Referencia
+obligacion.inicial.gasolina.totPagar=Total a pagar
 obligacion.inicial.gasolina.obcontra=Objeto contrato
 obligacion.inicial.gasolina.rop=Generar ROP
 obligacion.inicial.gasolina.pagar=Pagar
@@ -3686,6 +3691,7 @@ obligacion.inicial.delineacion.edoobli= Estado de obligación
 obligacion.inicial.delineacion.obligacion=Obligación
 obligacion.inicial.delineacion.numForm=Formulario
 obligacion.inicial.delineacion.numRef=Referencia
+obligacion.inicial.delineacion.totPagar=Total a pagar
 obligacion.inicial.delineacion.obcontra=Objeto contrato
 obligacion.inicial.delineacion.rop=Generar ROP
 obligacion.inicial.delineacion.pagar=Pagar
@@ -31221,7 +31227,7 @@ spac.table.cuotas=No. de cuotas
 spac.table.pagar=Pagar antes de
 spac.table.monto=Monto
 spac.table.estatus=Estatus
-spac.table.descargar=Descargar SPAC
+spac.table.descargar=Imprimir Cupón
 
 #Mensejes para buzón
 
