Ajustes Obligaciones pendientes para probar en QA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3592,6 +3592,8 @@ obligacion.inicial.periodo= Periodo
 obligacion.inicial.cancelar= Cancelar
 obligacion.inicial.buscar= Buscar
 obligacion.inicial.imprimir= Imprimir reporte
+obligacion.inicial.sinROP=Sin Rop
+obligacion.inicial.sinCupones=Sin Cupones
 
 obligacion.inicial.predio.chip = CHIP
 obligacion.inicial.predio.matricula = Matrícula Inmobiliaría
@@ -3609,6 +3611,8 @@ obligacion.inicial.predio.obcontra=Objeto Contrato
 obligacion.inicial.predio.rop=Generar ROP
 obligacion.inicial.predio.pagar=Pagar
 obligacion.inicial.predio.spac= Cupones
+
+
 
 obligacion.inicial.vehiculo.placa= Placa
 obligacion.inicial.vehiculo.modelo= Modelo
